@@ -34,9 +34,10 @@ struct tls_client_closure {
     void *parent_closure;
     struct sudo_event_base *evbase;	/* duplicated */
     struct sudo_event *tls_connect_ev;
-    struct peer_info *peer_name;
+    struct peer_info *peer_name;	/* duplicated */
     struct timespec connect_timeout;
     bool (*start_fn)(struct tls_client_closure *);
+    void (*connect_error_fn)(struct tls_client_closure *);
     bool tls_connect_state;
 };
 
